2008-06-08 Dodji Seketeli <dodji@gnome.org>

	* src/persp/dbgperspective/nmv-dbg-perspective.cc:
	  When opening a file, it has to be converted to the UTF-8 encoding.
	  This has been so for ages. What I just added is a way to specify the
	  possible encodings of the file we want to open. We need to know the
	  list of possible encodings of the files we need to open so that
	  Nemiver can know how to convert the encoding to UTF8. I have then
	  added a gconf key that lists the possible encodings. Whenever a file
	  cannot be opened because we don't know its encoding, the file
	  encoding just has to be added to the value of the gconf key.
	  This entry should fix bug #537281.

2008-06-08 Dodji Seketeli <dodji@gnome.org>

	* src/persp/dbgperspective/nmv-dbg-perspective.cc: replace static
	  storage class strings with char*. Using strings for static storage
	  class variables is useless and just slows down DSO loading time.

2008-06-08 Dodji Seketeli <dodji@gnome.org>

	* src/confmgr/nmv-i-conf-mgr.h, src/confmgr/nmv-gconf-mgr.cc: add
	  IConfMgr::get_key_value() and IConfMgr::set_key_value() for list
	  values.

2008-06-08 Dodji Seketeli <dodji@gnome.org>

	* src/confmgr/nmv-i-conf-mgr.h, src/confmgr/nmv-gconf-mgr.cc:
	  At end of lines, remove the space before the ";" <grin/>.

2008-06-01 Dodji Seketeli <dodji@gnome.org>

	* src/common/nmv-initializer.cc:
	 (Initializer::Initializer): init Glib type system as well.
	 This fixes test breaks on fedora9

2008-06-01 Dodji Seketeli <dodji@gnome.org>

	* src/langs/nmv-cpp-parser.cc:
	  (Parser::parse_simple_type_specifier): fix a gcc warning that
	  could have lead to a bug.

2008-05-31 Dodji Seketeli <dodji@gnome.org>

	* configure.ac: allow deprecated constructs because of the use the
	  hash_map that is deprecated in favour of c++0x based
	  unordered_map. This is turned on only when NEMIVER_DEVEL=on is
	  set.

2008-06-01 Dodji Seketeli <dodji@gnome.org>
