@@ -28,13 +28,18 @@ runteststdout \
 docore inout \
 pointerderef \
 fooprog \
-templatedvar
+templatedvar \
+gtkmm-test
 
 runtestgdbmi_SOURCES=test-gdbmi.cc
 runtestgdbmi_LDADD= @NEMIVERCOMMON_LIBS@ \
 @BOOST_UNIT_TEST_FRAMEWORK_STATIC_LIB@ \
 $(top_builddir)/src/common/libnemivercommon.la \
 $(top_builddir)/src/dbgengine/libgdbmiparser.la
+
+gtkmm_test_SOURCES=gtkmm-test.cc
+gtkmm_test_CXXFLAGS= @LIBGTKMM_CFLAGS@
+gtkmm_test_LDADD= @LIBGTKMM_LIBS@
 
 fooprog_SOURCES=fooprog.cc
 fooprog_LDADD=@NEMIVERCOMMON_LIBS@ \
